# template-architecture-agents

./: .docs-tracking.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: validate-docs.yml
docs/: PRD-FOR-TOOLS.md  deliverables-catalog.md  tools-catalog.md
inputs/: deliverables.csv  open-group-standards-materials.md  uri.csv
naming-and-standards/: archimate-file-format-guide.md  conventional-commits-guide.md  drawio-file-format-guide.md  json-schema-guide.md  semver-guide.md
prompting/: prompts.csv
schema/: tracking-schema.json
scripts/: check_docs_sync.py  update_tracking.py  validate_tracking.py
src/tracking_manager/: __init__.py  cli.py  models.py  utils.py
templates/: opengroup-archimate-library.xml  opengroup-architecture-template.drawio
tests/: __init__.py  test_tracking.py
